examples/mood/tests/fixtures/enum_construction_missing_value.mood.expected
Error: Variant "Some" is not a unit variant. Expected a value argument.:
 --> enum_construction_missing_value.mood:7:30

  | pub fn test(): i32 {
7 |   let x: Maybe = Maybe::Some();
  |                              ^ Expected a value here.
  |   10_i32
